dodopassboard.css
@use "@material/floating-label/mdc-floating-label";

@font-face {
  font-family: 'TTNorms';
  src: url("/dodo_passboard/TTNorms-Bold.woff");
  font-display: block;

}

.mdc-button,
.mdc-text-field,
.mdc-floating-label {
  --mdc-theme-primary: #5adcc9;
  
}

#generate_passboard  {
  background-color: blueviolet;
  width: 100%;
}
#name, #surname, #departure  {
  width: 100%;
}

#form{
  text-align: center;
}

.mdc-layout-grid__cell{
  align-self: center;
}

body {
  background: url(PNQ5cOe.png) repeat;
}

